Get information of service counts
The information of counting different types of alarm in an area is needed.

--- a/Assignment3_Coding_Z/Assignment3/DATA.ipynb
+++ b/Assignment3_Coding_Z/Assignment3/DATA.ipynb
@@ -281,7 +281,8 @@
    "source": [
     "eastDf = data.loc[data['Geog']=='East']\n",
     "eastDf.reset_index(inplace=True, drop=True)\n",
-    "eastDf.head()"
+    "eastDf.head()",
+    "eastDf.ServiceName.value_counts()"
    ],
    "metadata": {
     "collapsed": false,
