To get information from service counting
To draw a pie chart of service counting in different areas

--- a/Assignment3_Coding_Z/Assignment3/DATA.ipynb
+++ b/Assignment3_Coding_Z/Assignment3/DATA.ipynb
@@ -625,7 +625,8 @@
     "# North Month 5 data:\n",
     "northDf_5 = northDf.loc[northDf['month']=='05']\n",
     "northDf_5.reset_index(inplace=True, drop=True)\n",
-    "northDf_5.head()"
+    "northDf_5.head()",
+    "northDf.ServiceName.value_counts()"
    ],
    "metadata": {
     "collapsed": false,
