--- a/Assignment3_Coding_Z/Assignment3/DATA.ipynb
+++ b/Assignment3_Coding_Z/Assignment3/DATA.ipynb
@@ -886,7 +886,8 @@
     "# West Month 6 data:\n",
     "westDf_6 = westDf.loc[westDf['month']=='06']\n",
     "westDf_6.reset_index(inplace=True, drop=True)\n",
-    "westDf_6.head()"
+    "westDf_6.head()",
+    "westDf.ServiceName.value_counts()"
    ],
    "metadata": {
     "collapsed": false,
